TAP5-2700: changes to run tests on Java 17
Adding JDK 17 testing in Travis

TAP5-2700: allowing module classes written in Groovy again

This fixes GridSymbolDemoTests

TAP5-2700: fixing two broken tests

GridSymbolDemoTests and XMLTokenStreamTests. testStreamEncoding

TAP5-2700: trying to fix XMLTokenStreamTests.testStreamEncoding()

TAP5-2700: fixing bad JavaVersion enum value for Java 9

TAP5-2700: Tests covering new Java features from versions 9 to 17

TAP5-2700: fixing failing tests in CookiesImplTest

Fixing TapestryBeanValidationIntegrationTests > beaneditform_validation

Trying to get ParameterTests.null_bound_to_primitive_field_is_an_error

to pass in Jenkins