@@ -72,10 +72,9 @@ jar {
     }
 }
 
-// Needed to have XMLTokenStreamTests.testStreamEncoding() passing on Java 17
+// Needed to have XMLTokenStreamTests.testStreamEncoding() passing on Java 9+
 test {
     if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_1_9)) {
-        println "Java 9+ JVM arg: --add-opens=java.base/java.nio.charset=ALL-UNNAMED"
         jvmArgs("--add-opens=java.base/java.nio.charset=ALL-UNNAMED");
     }
 }
