@@ -1,5 +1,19 @@
 description = "Test suite for making sure Tapestry runs on latest Java"
 
+sourceCompatibility = "17"
+targetCompatibility = "17"
+
+tasks.withType(JavaCompile).each { 
+    it.options.compilerArgs.add("--enable-preview")
+}
+
+test {
+    useTestNG()
+    jvmArgs(["--enable-preview"])
+}
+
 dependencies {
-    api project(':tapestry-ioc')
+    testImplementation project(':tapestry-ioc')
+    testImplementation "org.slf4j:slf4j-api:${versions.slf4j}"
+    testImplementation "org.testng:testng:${versions.testng}"
 }
